# MLProjectWithMLOPS

./: =  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  template.py
svenv/conda-meta/: bzip2-1.0.8-h2bbff1b_6.json  ca-certificates-2025.2.25-haa95532_0.json  expat-2.7.1-h8ddb27b_0.json  history  libffi-3.4.4-hd77b12b_1.json  openssl-3.0.16-h3f729d1_0.json  pip-25.1-pyhc872135_2.json  python-3.12.0-h1d929f7_0.json  setuptools-78.1.1-py312haa95532_0.json  sqlite-3.45.3-h2bbff1b_0.json  tk-8.6.14-h0416ee5_0.json  tzdata-2025b-h04d1e81_0.json  vc-14.42-haa95532_5.json  vs2015_runtime-14.42.34433-hbfb602d_5.json  wheel-0.45.1-py312haa95532_0.json  xz-5.6.4-h4754444_1.json  zlib-1.2.13-h8cc25b3_1.json
svenv/etc/: aau_token
